--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "next": "14.2.33",
+    "next": "^15.5.10",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-markdown": "^9.0.3",
