--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ SEARCH_ENGINES=["duckduckgo"]
 SEARCH_MAX_RESULTS=8
 SEARCH_LANGUAGE=en
 SEARCH_REGION=wt-wt
+ARXIV_BASE_URL=http://export.arxiv.org/api/query
+ARXIV_CATEGORIES=["cs.AI","cs.LG","cs.CL","cs.CV","stat.ML"]
+ARXIV_MIN_INTERVAL_SECONDS=3.0
+ARXIV_MAX_RESULTS=24
 
 # Optional API keys for premium engines
 GOOGLE_API_KEY=
