--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ LLM_BASE_URL=
 LLM_MODEL=gpt-4o-mini
 LLM_TEMPERATURE=0.2
 LLM_MAX_TOKENS=1200
+LLM_API_KEY_FILE=key.txt
+LLM_AUTO_BASE_URL=https://generativelanguage.googleapis.com/v1beta/openai/
+LLM_AUTO_MODEL=gemini-2.5-flash
+LLM_COOLDOWN_DEFAULT_SECONDS=12.0
 
 # Search engines: comma or JSON array
 SEARCH_ENGINES=["duckduckgo"]
@@ -24,6 +28,7 @@ ARXIV_BASE_URL=http://export.arxiv.org/api/query
 ARXIV_CATEGORIES=["cs.AI","cs.LG","cs.CL","cs.CV","stat.ML"]
 ARXIV_MIN_INTERVAL_SECONDS=3.0
 ARXIV_MAX_RESULTS=24
+ARXIV_ANALYSIS_LLM_BUDGET=0
 
 # Optional API keys for premium engines
 GOOGLE_API_KEY=
